Fixed search pagination alignment.

--- a/content/css/style.css
+++ b/content/css/style.css
@@ -2787,7 +2787,7 @@ html.ready #community .visible #map a {
 
 #results .gsc-cursor-box {
 	position: absolute;
-	top: -66px;
+	top: -54px;
 	left: 30px;
 	font-size: 16px;
 	font-weight: bold;
